# llvm-project

./: .gitlab-ci.yml  .gitmodules
offload/: CMakeLists.txt
offload/include/: PluginManager.h  device.h
offload/plugins-nextgen/common/include/: MemoryManager.h  PluginInterface.h
offload/plugins-nextgen/common/src/: PluginInterface.cpp
offload/plugins-nextgen/cuda/dynamic_cuda/: cuda.cpp  cuda.h
offload/plugins-nextgen/cuda/src/: rtl.cpp
offload/plugins-nextgen/targetDART/: CMakeLists.txt
offload/plugins-nextgen/targetDART/src/: rtl.cpp
offload/plugins-nextgen/targetdart/: CMakeLists.txt
offload/plugins-nextgen/targetdart/src/: rtl.cpp
offload/plugins-nextgen/targetdart/support_structures/include/: communication.h  dependency.h  memory.h  queue.h  scheduling.h  task.h  threading.h
offload/plugins-nextgen/targetdart/support_structures/src/: communication.cpp  dependency.cpp  memory.cpp  queue.cpp  scheduling.cpp  task.cpp  threading.cpp
offload/src/: PluginManager.cpp  device.cpp  exports  interface.cpp  omptarget.cpp  private.h
offload/tools/deviceinfo/: CMakeLists.txt
offload/tools/kernelreplay/: CMakeLists.txt
openmp/libomptarget/: CMakeLists.txt
openmp/libomptarget/include/: TD_CrashHandling.h  TD_comm_thread.h  TD_common.h  TD_communication.h  TD_cost_estimation.h  TD_queue.h  TD_scheduling.h  TargetDART.h  omptarget.h
openmp/libomptarget/include/targetDART/: TD_comm_thread.h  TD_communication.h  TD_cost_estimation.h  TD_queue.h  TD_scheduling.h  TargetDART.h
openmp/libomptarget/src/: CMakeLists.txt  TD_CrashHandling.cpp  TD_comm_thread.cpp  TD_common.cpp  TD_communication.cpp  TD_cost_estimation.cpp  TD_queue.cpp  TD_scheduling.cpp  TargetDART.cpp  device.cpp  exports  interface.cpp  omptarget.cpp
openmp/libomptarget/src/targetDART/: TD_comm_thread.cpp  TD_common.cpp  TD_communication.cpp  TD_cost_estimation.cpp  TD_queue.cpp  TD_scheduling.cpp  TargetDART.cpp
openmp/runtime/src/: kmp_ftn_entry.h  kmp_ftn_os.h  kmp_taskdeps.cpp  kmp_tasking.cpp
openmp/runtime/src/include/: omp.h.var  omp_lib.F90.var  omp_lib.f90.var  omp_lib.h.var
